--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "T-AntV",
+  "name": "tumo-cloud-ui",
   "version": "4.3.1",
   "description": "based on ant-design-vue & vue-element-admin",
   "author": "TyCoding",
@@ -24,8 +24,9 @@
     ]
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.4",
-    "axios": "0.18.1",
+    "ant-design-vue": "^1.7.2",
+    "axios": "0.19.0",
+    "core-js": "^3.1.2",
     "js-cookie": "2.2.0",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
@@ -34,17 +35,17 @@
     "path-to-regexp": "2.4.0",
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
-    "vue": "2.6.10",
-    "vue-router": "3.0.2",
-    "vuex": "3.1.0"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.2.1",
-    "@vue/cli-plugin-babel": "3.5.3",
-    "@vue/cli-plugin-eslint": "^3.9.1",
+    "@vue/cli-plugin-babel": "^4.0.4",
+    "@vue/cli-plugin-eslint": "^4.0.4",
     "@vue/cli-plugin-unit-jest": "3.5.3",
-    "@vue/cli-service": "3.5.3",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/cli-service": "^4.0.4",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -52,18 +53,17 @@
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
-    "eslint": "5.15.3",
-    "eslint-plugin-vue": "5.2.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
-    "mockjs": "1.0.1-beta3",
     "runjs": "^4.3.2",
     "script-ext-html-webpack-plugin": "2.1.3",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "^2.6.10"
   },
   "engines": {
     "node": ">=8.9",
