fix: change api set

--- a/.env.development
+++ b/.env.development
@@ -8,17 +8,17 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-VITE_PROXY = [["/tumo-boot","http://localhost:8010"],["/oss","http://localhost:8010/oss"],["/upload","http://localhost:8010/upload"]]
+VITE_PROXY = [["/tumo-cloud","http://localhost:8010"],["/oss","http://localhost:8010/oss"],["/upload","http://localhost:8010/upload"]]
 # VITE_PROXY=[["/api","https://vvbin.cn/test"]]
 
 # Delete console
 VITE_DROP_CONSOLE = false
 
 # Basic interface address SPA
-VITE_GLOB_API_URL=/tumo-boot
+VITE_GLOB_API_URL=/tumo-cloud
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/oss
 
 # Interface prefix
-VITE_GLOB_API_URL_PREFIX=/tumo-boot
+VITE_GLOB_API_URL_PREFIX=/tumo-cloud
