fix: 全局处理异常

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 3100
 
 # spa-title
-VITE_GLOB_APP_TITLE = Tumo Boot
+VITE_GLOB_APP_TITLE = Tumo Cloud
 
 # spa shortname
-VITE_GLOB_APP_SHORT_NAME = tumo_boot
+VITE_GLOB_APP_SHORT_NAME = tumo_cloud
