--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen    80;
     root      /data/;
 
-    location ^~/tumo-boot {
-       proxy_pass http://172.30.0.80:8090;
+    location ^~/tumo-cloud {
+       proxy_pass http://172.30.0.90:9999;
        proxy_connect_timeout 15s;
        proxy_send_timeout 15s;
        proxy_read_timeout 15s;
