--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_PORT = 3100
+VITE_PORT = 3200
 
 # Whether to open mock
 VITE_USE_MOCK = true
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-VITE_PROXY = [["/tumo-cloud","http://localhost:9999"],["/oss","http://localhost:9999/oss"],["/upload","http://localhost:9999/upload"]]
+VITE_PROXY = [["/tumo-cloud","http://localhost:9999"],["/oss","http://localhost:9999/tumo-cloud/upms/oss"]]
 # VITE_PROXY=[["/api","https://vvbin.cn/test"]]
 
 # Delete console
